syntax = "proto3";

package todo;
option go_package = "/pb;pb";

service TodoService {
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message CreateTodoResponse {
    string id = 1;
}